--- a/src/web/views/index/index.html
+++ b/src/web/views/index/index.html
@@ -1,33 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="format-detection" content="email=no" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/index.css">
-    <title><%= title %></title>
-</head>
 <body>
-    <!-- 变量 -->
-    <h1>Hello <%= title %></h1>
-    <!-- 标签 -->
-    <%- labelP %>
-    <!-- 逻辑 -->
-    <% if(atrue){ %>
-        <h1><%= atrue %></h1>
-    <% } %>
-    <!-- 遍历 -->
-    <ul>
-        <% array.map((v,i)=>{ %>
-            <%- `<li>${v}</li>`%>
-        <% }) %>
-    </ul>
-    <div id="app">
-        {{ message }}
-    </div> 
-    <script src="library/vue.min.js"></script>
-    <script src="scripts/index.js" defer></script>
+    
+    <p>京ICP备18031167号-1</p>
 </body>
-</html>
